[package]
name = "domainscan"
version = "0.2.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform domain scan library"
repository = "https://github.com/shellrow/domainscan"
readme = "README.md"
keywords = ["domain","dns","security","scan"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "socks"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1.21", features = ["time"] }
futures = { version = "0.3", features = ["executor", "thread-pool"] }
hickory-resolver = { version = "0.24" }

[features]
default = ["passive", "serde"]
serde = ["dep:serde", "dep:serde_json"]
passive = ["dep:reqwest", "serde"]

[[example]]
name = "scan_subdomain"
path = "examples/scan_subdomain.rs"

[[example]]
name = "scan_subdomain_passive"
path = "examples/scan_subdomain_passive.rs"
required-features = ["passive"]
